<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/grad"
    android:orientation="vertical"
    tools:context=".activity.SecondActivity">


    <EditText
        android:id="@+id/ed1"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed2" />

    <EditText
        android:id="@+id/ed2"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="127dp"
        android:layout_height="68dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="96dp"
        android:text="@string/read"
        app:cornerRadius="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed1"
        app:layout_constraintVertical_bias="0.86" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="218dp"
        android:layout_height="88dp"
        android:layout_marginTop="96dp"
        android:text="@string/sign_in"
        app:cornerRadius="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed1" />


    <Button
        android:id="@+id/btnClear"
        android:layout_width="127dp"
        android:layout_height="68dp"
        android:layout_marginTop="344dp"
        android:text="@string/clear"
        app:cornerRadius="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed1"
        app:layout_constraintVertical_bias="0.865" />

    <Button
        android:id="@+id/btnnext"
        android:layout_width="218dp"
        android:layout_height="88dp"
        android:layout_marginTop="32dp"
        android:text="@string/after"
        app:cornerRadius="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>