<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/grad"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="340dp"
        android:layout_height="62dp"
        android:ems="10"
        android:inputType=""
        android:text="@string/choose_sphere"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cinema"
        android:layout_width="170dp"
        android:layout_height="132dp"
        android:layout_marginEnd="24dp"
        android:text="@string/cinema"
        app:cornerRadius="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.501" />

    <Button
        android:id="@+id/theatres"
        android:layout_width="170dp"
        android:layout_height="132dp"
        android:text="@string/theatre"
        app:cornerRadius="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cinema"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>