<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filmPageBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    tools:context=".film_page">

    <ImageView
        android:id="@+id/filmPageImage"
        android:layout_width="337dp"
        android:layout_height="282dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pauk" />

    <Button
        android:id="@+id/button2"
        android:layout_width="222dp"
        android:layout_height="78dp"
        android:layout_marginTop="7dp"
        android:text="@string/registration_for_activity"
        app:cornerRadius="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toEndOf="@+id/read"
        app:layout_constraintTop_toBottomOf="@+id/filmPageDesc"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/filmPageTitle"
        android:layout_width="122dp"
        android:layout_height="58dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/filmPageDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filmPageImage" />

    <TextView
        android:id="@+id/filmPageDate"
        android:layout_width="122dp"
        android:layout_height="58dp"
        android:layout_marginTop="2dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toEndOf="@+id/filmPageTitle"
        app:layout_constraintTop_toBottomOf="@+id/filmPageImage" />

    <TextView
        android:id="@+id/filmPageDesc"
        android:layout_width="379dp"
        android:layout_height="89dp"
        android:layout_marginTop="112dp"
        android:maxLines="6"
        android:scrollbars="vertical"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filmPageImage" />

    <TextView
        android:id="@+id/filmPageType"
        android:layout_width="133dp"
        android:layout_height="36dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="3dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/filmPageDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filmPageImage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tPagePlace"
        android:layout_width="133dp"
        android:layout_height="36dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="3dp"
        android:text="TextView"
        android:textColor="@color/white"
        android:transitionName="filmImage"
        app:layout_constraintBottom_toTopOf="@+id/filmPageDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filmPageImage"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/read"
        android:layout_width="144dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:text="@string/read"
        app:cornerRadius="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filmPageDesc"
        app:layout_constraintVertical_bias="0.905" />

    <Button
        android:id="@+id/clear"
        android:layout_width="136dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:text="@string/clear"
        app:cornerRadius="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filmPageDesc"
        app:layout_constraintVertical_bias="0.923" />

</androidx.constraintlayout.widget.ConstraintLayout>